# xforce-terminal-contracts

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
client/: Cargo.toml  README.md
client/src/: batch_swap_router.rs  error.rs  lib.rs  security.rs  types.rs
docs/: MVP_SUMMARY.md  SECURITY.md
examples/: Cargo.toml  terminal_integration.rs
programs/: Cargo.toml
programs/batch-swap-router/: Cargo.toml  README.md
programs/batch-swap-router/src/: constants.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs  swap_execution.rs  utils.rs
programs/batch-swap-router/src/instructions/: batch_swap.rs  execute_swap.rs  mod.rs
tests/: batch-swap-router.ts
