[package]
name = "xforce-terminal-contracts-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "terminal_integration"
path = "terminal_integration.rs"

[dependencies]
xforce-terminal-contracts-client = { path = "../client" }
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "~1.18.0"

